# Projet-ARME

./: pyproject.toml
myenv/: pyvenv.cfg
optimisation_militaire/: generalisation.py  graphique.py  main.py  main2.py  question.py
optimisation_militaire/data/: generalisation_data.json
src/optimisation_militaire/: dual.py  main.py
src/optimisation_militaire/data/: generalisation_data.json
src/question/: dual.py  graphique.py  main.py  primal.py
tests/: test_arme.py  test_generalisation.py  test_question.py
