[project]
name = "arme"
version = "0.1.0"
description = "Projet d'optimisation d'armement"
readme = "README.md"
authors = [
    { name = "Ilayda Yilmaz", email = "ilayda.yilmaz@etu.univ-tours.fr" }
]
requires-python = ">=3.11"

[project.scripts]
arme = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
